--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div id="container">
     <div id="profile">
-      <img src="assets/Avatar.png" alt="Foto de Gabriel Oliveira, moreno, cabelo cacheado, curto, com um fundo de meio ambiente - natureza vestindo uma roupa social. ">
+      <img src="https://media.licdn.com/dms/image/D4D03AQE4JAYpU9os3A/profile-displayphoto-shrink_200_200/0/1675804459247?e=1681344000&v=beta&t=XsqK9LqQdElr71ZWfVqcO_miGZSgkUwC5tTSRhyOeHI" alt="Foto de Gabriel Oliveira, moreno, cabelo cacheado, curto, com um fundo de meio ambiente - natureza vestindo uma roupa social. ">
       <p>@_gabrielsil</p>
     </div>
 
