--- a/index.html
+++ b/index.html
@@ -28,27 +28,24 @@
     </div>
 
     <ul>
-      <li><a target="_blank" href="#">Meu Linkedin</a></li>
-      <li><a target="_blank" href="#">Meu portifólio</a></li>
-      <li><a target="_blank" href="#">GitHub</a></li>
-      <li><a target="_blank" href="#">Projetos</a></li>
-      <li><a target="_blank" href="#">Minha Empresa</a></li>
+      <li><a target="_blank" href="https://www.linkedin.com/in/gabriel1512/">Meu Linkedin</a></li>
+      <li><a target="_blank" href="https://gaoliveira.dev/index.html">Meu portifólio</a></li>
+      <li><a target="_blank" href="https://github.com/gabriel-sil">GitHub</a></li>
+      <li><a target="_blank" href="https://gaoliveira.dev/projetos.html">Projetos</a></li>
+      <li><a target="_blank" href="https://www.instagram.com/_gabrielsil/">Instagram</a></li>
     </ul>
     <div id="social-links">
-      <a href="#" target="_blank">
+      <a href="https://www.linkedin.com/in/gabriel1512/" target="_blank">
         <ion-icon name="logo-linkedin"></ion-icon>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://github.com/gabriel-sil" target="_blank">
         <ion-icon name="logo-github"></ion-icon>
       </a>
       <a href="#" target="_blank">
         <ion-icon name="logo-whatsapp"></ion-icon>
       </a>
-      <a href="#" target="_blank">
-        <ion-icon name="logo-facebook"></ion-icon>
-      </a>
-      <a href="#" target="_blank">
-        <ion-icon name="logo-tiktok"></ion-icon>
+      <a href="https://www.instagram.com/_gabrielsil/" target="_blank">
+        <ion-icon name="logo-instagram"></ion-icon>
       </a>
     </div>
     <footer>
